Basic project done.

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
+    <title>Afonso's Domain Generator</title>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
@@ -16,7 +16,7 @@
     <div class="container-fluid text-center">
       <h1 class="mt-5">Hello Rigo!</h1>
       <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
+      <p class="alert alert-warning mt-4" id="domain">
         If this text is <b>not</b> centered and <b>yellow</b>, you probably have
         an error
       </p>
